--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Django==1.6
 Fabric==1.8.0
 PyYAML==3.10
 South==0.8.2
@@ -7,8 +8,10 @@ coverage==3.7.1
 django-debug-toolbar==0.10.2
 ecdsa==0.10
 paramiko==1.12.0
+pep8==1.4.6
 psycopg2==2.4.6
 pycrypto==2.6.1
+pyflakes==0.7.3
 python-coveralls==2.4.2
 python-memcached==1.53
 requests==2.1.0
