--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ boto==2.15.0
 coverage==3.7.1
 django-debug-toolbar==0.10.2
 ecdsa==0.10
+greeking==0.200
 paramiko==1.12.0
 pep8==1.4.6
 psycopg2==2.4.6
@@ -16,5 +17,5 @@ python-coveralls==2.4.2
 python-memcached==1.53
 requests==2.1.0
 sh==1.09
-six==1.5.1
+six==1.5.2
 sqlparse==0.1.10
