--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==1.6
 Fabric==1.8.0
 PyYAML==3.10
 South==0.8.2
-argparse==1.2.1
+argparse
 boto==2.15.0
 coverage==3.7.1
 django-debug-toolbar==0.10.2
