--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pep8==1.4.6
 psycopg2==2.4.6
 pycrypto==2.6.1
 pyflakes==0.7.3
+pyinotify==0.9.4
 python-coveralls==2.4.2
 python-memcached==1.53
 requests==2.1.0
