--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
-Django==1.6.2
-Fabric==1.8.0
-PyYAML==3.10
-South==0.8.2
+Django
+Fabric
+South
 argparse
-boto==2.15.0
-coverage==3.7.1
-django-debug-toolbar==1.0.1
-ecdsa==0.10
-greeking==0.200
-paramiko==1.12.0
-pep8==1.4.6
-psycopg2==2.4.6
-pycrypto==2.6.1
-pyflakes==0.7.3
-pyinotify==0.9.4
-python-coveralls==2.4.2
-python-memcached==1.53
+boto
+coverage
+django-debug-toolbar
+greeking
+pep8
+psycopg2
+pycrypto
+pyflakes
+pyinotify
+python-coveralls
+python-memcached
 pytz
-requests==2.1.0
-sh==1.09
-six==1.5.2
-sqlparse==0.1.11
+six
+sqlparse
