Added split wsgi files for dev and prod to make it easier for us to get things like newrelic rolling. Fixes #16

--- a/project_name/settings_dev.template
+++ b/project_name/settings_dev.template
@@ -23,3 +23,4 @@ TEMPLATE_LOADERS = (
     'django.template.loaders.app_directories.Loader',
 )
 STATIC_URL = '/static/'
+WSGI_APPLICATION = '{{ project_name }}.wsgi_dev.application'
